@@ -22,16 +22,14 @@
 ## *******************************************************************************************************************
 ## Landsat auxilliary data. Taken from Chander et al 2009
 ## spatRes resampling: http://landsat.usgs.gov/band_designations_landsat_satellites.php
+## ESUN values according to: https://landsat.usgs.gov/esun
 .LANDSATdb <- list(
 		LANDSAT1 = list (
 				MSS =  data.frame(band = paste0("B", 4:7, "_dn"),
 						bandtype   = rep("REF", 4),
 						centerWavl = c(0.548, 0.652, 0.747, 0.900),
 						spatRes1   = rep(60, 4), ## resampled
-						## All MSS sensors are cross-calibrated to Landsat 5 MSS, so reflectance calculations need to use Landsat 5 MSS parameters for ESUN.
-						## http://landsat.usgs.gov/NewMSSProduct.php
-						## These are the LS5 ESUN values from Chander 2009:
-						esun = c(1824, 1570, 1249, 853.4) ,  
+						esun = c(1848, 1588, 1235, 856.6) ,  
 						stringsAsFactors = FALSE
 				)
 		),
@@ -41,11 +39,8 @@
 						bandtype = rep("REF", 4),
 						centerWavl = c(0.548, 0.659, 0.750, 0.899),
 						spatRes1 = rep(60, 4), ##resampled
-						## All MSS sensors are cross-calibrated to Landsat 5 MSS, so reflectance calculations need to use Landsat 5 MSS parameters for ESUN.
-						## http://landsat.usgs.gov/NewMSSProduct.php
-						## These are the LS5 ESUN values from Chander 2009:
-						esun = c(1824, 1570, 1249, 853.4) ,  ## Chander 2009
-						stringsAsFactors = FALSE
+                        esun = c(1848, 1588, 1235, 856.6) ,  
+                        stringsAsFactors = FALSE
 				)
 		),
 		
@@ -54,24 +49,26 @@
 						bandtype = rep("REF", 4),
 						centerWavl = c(0.545, 0.656, 0.743,	0.896),
 						spatRes1 = rep(60, 4), ##resampled
-						## All MSS sensors are cross-calibrated to Landsat 5 MSS, so reflectance calculations need to use Landsat 5 MSS parameters for ESUN.
-						## http://landsat.usgs.gov/NewMSSProduct.php
-						## These are the LS5 ESUN values from Chander 2009:
-						esun = c(1824, 1570, 1249, 853.4) ,  ## Chander 2009
+                        esun = c(1848, 1588, 1235, 856.6) ,  
 						stringsAsFactors = FALSE
 				)
 		
 		),
 		
 		LANDSAT4 = list (
+                TM = data.frame(band = paste0("B", 1:7, "_dn"),
+                        bandtype = c(rep("REF", 5), "TIR", "REF"),
+                        centerWavl = c(0.486, 0.569, 0.659, 0.841, 1.676, 11.040, 2.222), ## Chander2009 Tab3
+                        spatRes1 = rep(30, 7),
+                        spatRes2 = c(rep(30,5), 60, 30), ## TM Band 6 was acquired at 120-meter resolution, but products processed before February 25, 2010 are resampled to 60-meter pixels. Products processed after February 25, 2010 are resampled to 30-meter pixels.
+                        esun = c(1958, 1826, 1554, 1033, 214.7, NA, 80.70) ,	
+                        stringsAsFactors = FALSE
+                ),
 				MSS =  data.frame(band = paste0("B", 1:4, "_dn"),
 						bandtype = rep("REF", 4),
 						centerWavl = c(0.550, 0.650, 0.757,	0.916),
 						spatRes1 = rep(60, 4), ##resampled
-						## All MSS sensors are cross-calibrated to Landsat 5 MSS, so reflectance calculations need to use Landsat 5 MSS parameters for ESUN.
-						## http://landsat.usgs.gov/NewMSSProduct.php
-						## These are the LS5 ESUN values from Chander 2009:
-						esun = c(1824, 1570, 1249, 853.4) ,  ## Chander 2009
+                        esun = c(1848, 1588, 1235, 856.6) ,  
 						stringsAsFactors = FALSE
 				)
 		
@@ -83,15 +80,15 @@
 						centerWavl = c(0.485, 0.569, 0.66, 0.840, 1.676, 11.435, 2.223),
 						spatRes1 = rep(30, 7),
 						spatRes2 = c(rep(30,5), 60, 30), ## TM Band 6 was acquired at 120-meter resolution, but products processed before February 25, 2010 are resampled to 60-meter pixels. Products processed after February 25, 2010 are resampled to 30-meter pixels.
-						esun = c(1983, 1796, 1536, 1031, 220, NA, 83.44) ,
+						esun = c(1958, 1827, 1551, 1036, 214.9, NA, 80.65) ,
 						stringsAsFactors = FALSE
 				),
 				MSS =  data.frame(band = paste0("B", 1:4, "_dn"),
 						bandtype = rep("REF", 4),
 						centerWavl = c(0.552, 0.650,0.759,0.923),
 						spatRes1 = rep(60, 4), ##resampled
-						esun = c(1824, 1570, 1249, 853.4) ,  ## Chander 2009
-						stringsAsFactors = FALSE
+                        esun = c(1848, 1588, 1235, 856.6) ,  
+                        stringsAsFactors = FALSE
 				)
 		),
 		
@@ -101,7 +98,7 @@
 						spatRes1 = c(rep(30, 9), 15),
 						spatRes2 = c(rep(30,5), rep(60,3), 30, 15),  ## ETM+ Band 6 is acquired at 60-meter resolution. Products processed after February 25, 2010 are resampled to 30-meter pixels.
 						centerWavl = c(0.485, 0.560, 0.660, 0.835, 1.650, rep(11.335,3),2.220,0.706),
-						esun = c(1997,1812,1533,1039,230.8,rep(NA,3),84.9,1362),
+						esun = c(1970, 1842, 1547, 1044, 225.7, rep(NA,3), 82.06, 1369),
 						stringsAsFactors = FALSE
 				)
 		),
